vlib/v/checker/tests/unimplemented_interface_i.vv
interface Animal {
	name string
}

struct Cat {
	name int
}

fn main() {
	mut animals := []Animal{}
	animals << Cat{}
}
